--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,9 @@ spring.main.web-application-type=none
 selenium.browser=chrome
 
 target.application.baseUrl=https://cartaxcheck.co.uk/
+
+input.file.location=src/test/resources/input/car_input.txt
+
+output.file.location=src/test/resources/input/car_output.txt
+
+uk.numberplate.match.regexp=[A-Z]{2}[0-9]{2} [A-Z]{3}[a-zA-Z]*|[A-Z]{2}[0-9]{2}[A-Z]{3}[a-zA-Z]*
